--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas class="background" id="background"></canvas>
+    <img src="player/character.png" alt="player" id="player" class="player">
     <script src="script.js"></script>
 </body>
 </html>
