feat:added attack anims
Attack anims and enemy elements, bug: looping attack anims

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <canvas class="background" id="background"></canvas>
     <img src="player/character.png" alt="player" id="player" class="player">
+    <!-- <img src="player/character.png" alt="enemy" id="enemy" class="enemy"> -->
     <script src="script.js"></script>
 </body>
 </html>
