--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <canvas class="background" id="background"></canvas>
     <img src="player/character.png" alt="player" id="player" class="player">
     <img src="player/character.png" alt="enemy" id="enemy" class="enemy">
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
