feat:Turn based mechanics
Still not working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <canvas class="background" id="background"></canvas>
-    <img src="player/character.png" alt="player" id="player" class="player">
+    <img src="Sprites/Player/Idle.png" alt="playerIdle" id="playerIdle" class="player">
+    <img src="Sprites/Player/Attack_1.png" alt="playerAttack1" id="playerAttack1" class="player">
+    <img src="Sprites/Player/Attack_2.png" alt="playerAttack2" id="playerAttack2" class="player">
+    <img src="Sprites/Player/Attack_3.png" alt="playerAttack3" id="playerAttack3" class="player">
+    <img src="Sprites/Player/Hurt.png" alt="playerHurt" id="playerHurt" class="player">
+    <img src="Sprites/Player/Dead.png" alt="playerDead" id="playerDead" class="player">
+    
     <img src="player/character.png" alt="enemy" id="enemy" class="enemy">
     <script type="module" src="script.js"></script>
 </body>
