feat:TurnBased system
working turn based system with modularized anims

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <img src="Sprites/Player/Hurt.png" alt="playerHurt" id="playerHurt" class="player">
     <img src="Sprites/Player/Dead.png" alt="playerDead" id="playerDead" class="player">
     
-    <img src="player/character.png" alt="enemy" id="enemy" class="enemy">
+    <img src="Sprites/Enemy/Black_Werewolf/Idle.png" alt="enemyIdle" id="enemyIdle" class="enemy">
+    <img src="Sprites/Enemy/Black_Werewolf/Attack_1.png" alt="enemyAttack1" id="enemyAttack1" class="enemy">
+    <img src="Sprites/Enemy/Black_Werewolf/Attack_2.png" alt="enemyAttack2" id="enemyAttack2" class="enemy">
+    <img src="Sprites/Enemy/Black_Werewolf/Attack_3.png" alt="enemyAttack3" id="enemyAttack3" class="enemy">
+    <img src="Sprites/Enemy/Black_Werewolf/Hurt.png" alt="enemyHurt" id="enemyHurt" class="enemy">
+    <img src="Sprites/Enemy/Black_Werewolf/Dead.png" alt="enemyDead" id="enemyDead" class="enemy">
+
+    
     <script type="module" src="script.js"></script>
 </body>
 </html>
